# LFUCache

./: .gitignore  Belady.cpp  CMakeLists.txt  LFU.cpp  README.md  main.cpp
inc/: BeladyCache.hpp  Cache.hpp  IdealCache.hpp  LFUCache.hpp  LIRSCache.hpp  Utilities.hpp
tests/: CMakeLists.txt  Test.cpp  e2eTester.py  test.cpp
tests/e2e/Belady/: 3.in  6.in  7.in  8.in
tests/e2e/LFU/: 1.in  2.in  3.in  6.in  7.in  8.in
tests/inc/: Generator.hpp  IdealCache.hpp  TestCache.hpp  generator.hpp
